--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><title>Family Health App</title></head>
+<head><title>Η Υγεία της Οικογένειάς μας</title></head>
 <body>
-<h1>Η Υγεία της Οικογένειάς μας</h1>
+<div id='root'></div>
 </body>
 </html>
